feat: python upgrade (version 3)

--- a/INSTALL
+++ b/INSTALL
@@ -1,15 +1,15 @@
 To install it, make sure you have these programs installed:
 
-    * Python >= 2.7
-    * python-setuptools
-    * python-stdeb (to create a DEB package)
+    * Python >= 3.6
+    * python3-setuptools
+    * python3-stdeb (to create a DEB package)
 
 
 Package deb
 ===========
 create a package .deb through this command:
 
-    $ python setup.py --command-packages=stdeb.command bdist_deb
+    $ python3 setup.py --command-packages=stdeb.command bdist_deb
 
 And finally, install package:
 
@@ -23,7 +23,7 @@ Open the Command Prompt
 Goto your Start Menu. Start > All Programs > Accessories > Command Prompt
 
 Type into the Command Prompt window:
-set path=%path%;C:\Python27\
+set path=%path%;C:\Python36\
 And hit enter.
 
 python setup.py install
